# cv

./: .env.sample  .gitignore  CV.code-workspace  Dockerfile  README.md  compose.yml  cv.html  entrypoint.sh  index.js  main.py  pyproject.toml  readme.html  readme.md  requirements.txt  ruff.toml
prisma/: schema.prisma
prisma/migrations/20240825191406_init/: migration.sql
src/cv/: api.py  app.py  deps.py  main.py  push_anton.py  seed.py
src/cv/api/: author.py  experience.py  home.py  jinja.py
src/templates/: author.html  author_edit.html  author_name.html  author_name_edit.html  experience.html  experience_edit.html  index.html  layout.html
