[project]
name = "cv"
version = "0.1.0"
description = "Generate resume in PDF format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.6",
]
