[project]
name = "cv"
version = "0.1.0"
description = "Generate resume in PDF format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45.1",
    "prisma>=0.14.0",
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "jinja-partials>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.6",
]
